Added addNewBook operation
